[package]
name = "sdx_nft_art_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#debug = 1

[dependencies]
clap = "3.0"
anyhow = "1.0"
image = "0.23"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
